<resources>
    <string name="app_name">Discuss On Drawing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawing_name">Drawing Name</string>
    <string name="add_drawing_title_desc">Add the drawing image below</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>

    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="permission_file_access">Permission required to access files</string>
    <string name="failed_to_send_message">Failed to send message: %1$s</string>

    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to upload : %1$s</string>
    <string name="failed_to_fetch_list">Failed to fetch list: %1$s</string>
    <string name="marker_count">Markers : %1$s</string>
    <string name="added_by_name">Added by : %1$s</string>
    <string name="marker_title">Title</string>
    <string name="added_by">Added By</string>
    <string name="discussion_threads">Discussion Threads</string>
    <string name="marker">Markers</string>

</resources>