<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee"
        android:padding="@dimen/margin_large"
        tools:context=".screens.addDrawing.AddDrawingFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_small"
            app:cardElevation="4dp"
            app:contentPadding="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDrawingName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:hint="@string/drawing_name"
                    android:textColorHint="@color/colorPrimary"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDrawingName"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvAddImageStatic"
                    style="@style/DrawTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/add_drawing_title_desc"
                    app:layout_constraintEnd_toEndOf="@+id/tilDrawingName"
                    app:layout_constraintStart_toStartOf="@+id/tilDrawingName"
                    app:layout_constraintTop_toBottomOf="@+id/tilDrawingName" />

                <ImageView
                    android:id="@+id/ivDrawImage"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_large"
                    android:scaleType="fitCenter"
                    android:tag="@string/add"
                    android:src="@drawable/ic_vector_add_photo"
                    app:layout_constraintEnd_toEndOf="@+id/tvAddImageStatic"
                    app:layout_constraintStart_toStartOf="@+id/tvAddImageStatic"
                    app:layout_constraintTop_toBottomOf="@+id/tvAddImageStatic" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvAddNew"
            app:layout_constraintVertical_bias="0.12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAdd"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnClear" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>